--- a/contact.html
+++ b/contact.html
@@ -88,6 +88,9 @@
           <i class="bi bi-whatsapp"></i>
         </a>
       </div>
+      <div class="texto-pie-pagina1 col">
+        <h3>Gonzalo Netka 2023 &copy</h3> 
+      </div>
       <div class="texto-pie-pagina col">
         <h2>Cohort</h2>
       </div>
