--- a/upcoming-event.html
+++ b/upcoming-event.html
@@ -85,7 +85,7 @@
       </fieldset>
     </div>
     <!-- TARJETAS -->
-    <section>
+    <!-- <section>
       <div class="conteiner tarjetas">
         
         <div class="card" style="width: 18rem;">
@@ -121,8 +121,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
+    <div id="tarjetas-upcomings" class="conteiner tarjetas">
+
+    </div>
   </section>
       <!-- PIE DE PAGINA -->
       <footer>
@@ -138,11 +141,15 @@
               <i class="bi bi-whatsapp"></i>
             </a>
           </div>
+          <div class="texto-pie-pagina1 col">
+            <h3>Gonzalo Netka 2023 &copy</h3> 
+          </div>
           <div class="texto-pie-pagina col">
             <h2>Cohort</h2>
           </div>
         </div>
       </footer>
+  <script src="./data-upcoming-events.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  
 </body>
 </html>
