:bookmark: :sparkles: :refactor Add javascripts to make search inputsdinamically and make filters to search by text and category

--- a/home.html
+++ b/home.html
@@ -58,31 +58,43 @@
   </header>
   <section>
     <!-- BARRA BUSQUEDA -->
-  <div class="container-fluid caja-busqueda">
+  <!-- <div class="container-fluid caja-busqueda">
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="categoria" id="categoria1" value="categoria1">
-      <label class="form-check-label" for="categoria1">categoria 1</label>
+      <input class="form-check-input" type="checkbox" name="foodFair" id="foodFair" value="foodFair">
+      <label class="form-check-label" for="foodFair">Food Fair</label>
     </div>
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="categoria" id="categoria2" value="categoria2">
-      <label class="form-check-label" for="categoria2">categoria 2</label>
+      <input class="form-check-input" type="checkbox" name="museum" id="Museum" value="Museum">
+      <label class="form-check-label" for="museum">Museum</label>
     </div>
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="categoria" id="categoria3" value="categoria3">
-      <label class="form-check-label" for="categoria3">categoria 3</label>
+      <input class="form-check-input" type="checkbox" name="costumeParty" id="costumeParty" value="costumeParty">
+      <label class="form-check-label" for="costumeParty">Costume Party</label>
     </div>
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="categoria" id="categoria4" value="categoria4">
-      <label class="form-check-label" for="categoria4">categoria 4</label>
+      <input class="form-check-input" type="checkbox" name="musicConcert" id="musicConcert" value="musicConcert">
+      <label class="form-check-label" for="musicConcert">Music Concert</label>
     </div>
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="categoria" id="categoria5" value="categoria5">
-      <label class="form-check-label" for="categoria5">categoria 5</label>
+      <input class="form-check-input" type="checkbox" name="race" id="race" value="race">
+      <label class="form-check-label" for="race">Race</label>
+    </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" name="bookExchange" id="bookExchange" value="bookExchange">
+      <label class="form-check-label" for="bookExchange">Book Exchange</label>
+    </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" name="cinema" id="cinema" value="cinema">
+      <label class="form-check-label" for="cinema">Cinema</label>
     </div>
     <fieldset class="busqueda2 col">
       <input type="text" id="busqueda" name="busqueda" size="22">
-      <label for="busqueda"><button type="submit">go</button></label>
+      
     </fieldset>
+  </div> -->
+
+  <div id="busqueda" class="container-fluid caja-busqueda">
+
   </div>
       <!-- TARJETAS -->
     <!-- <section>
@@ -104,33 +116,33 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img src="images/Concierto.jpg" class="card-img-top" alt="Music Concert">
+          <img src="images/Concierto.jpg" class="card-img-top" alt="musicConcert">
           <div class="card-body">
-            <h5 class="card-title">Music Concert</h5>
+            <h5 class="card-title">musicConcert</h5>
             <p class="card-text">The only concert of the most emblematic band in the world</p>
             <a href="detail-event.html" class="btn btn-primary">See more</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img src="images/Feria-comidas7.jpg" class="card-img-top" alt="Food Fair">
+          <img src="images/Feria-comidas7.jpg" class="card-img-top" alt="foodFair">
           <div class="card-body">
-            <h5 class="card-title">Food Fair</h5>
+            <h5 class="card-title">foodFair</h5>
             <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the whole family.</p>
             <a href="detail-event.html" class="btn btn-primary">See more</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img src="images/Fiesta-disfraces.jpg" class="card-img-top" alt="Costume Party">
+          <img src="images/Fiesta-disfraces.jpg" class="card-img-top" alt="costumeParty">
           <div class="card-body">
-            <h5 class="card-title">Costume Party</h5>
+            <h5 class="card-title">costumeParty</h5>
             <p class="card-text">Come in your scariest costume character to win amazing prizes.</p>
             <a href="detail-event.html" class="btn btn-primary">See more</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img src="images/Maraton3.jpg" class="card-img-top" alt="Race">
+          <img src="images/Maraton3.jpg" class="card-img-top" alt="race">
           <div class="card-body">
-            <h5 class="card-title">Race</h5>
+            <h5 class="card-title">race</h5>
             <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
             <a href="detail-event.html" class="btn btn-primary">See more</a>
           </div>
@@ -174,6 +186,7 @@
         </div>
       </footer>
   <script src="./data.js"></script>
+  <script src="./data-home.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  
 </body>
 </html>
