--- a/upcoming-event.html
+++ b/upcoming-event.html
@@ -58,7 +58,7 @@
   </header>
   <section>
     <!-- BARRA BUSQUEDA -->
-    <div class="container-fluid caja-busqueda">
+    <!-- <div class="container-fluid caja-busqueda">
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" name="categoria" id="categoria1" value="categoria1">
         <label class="form-check-label" for="categoria1">categoria 1</label>
@@ -83,7 +83,11 @@
         <input type="text" id="busqueda" name="busqueda" size="22">
         <label for="busqueda"><button type="submit">go</button></label>
       </fieldset>
+    </div> -->
+    <div id="busqueda" class="container-fluid caja-busqueda">
+
     </div>
+    
     <!-- TARJETAS -->
     <!-- <section>
       <div class="conteiner tarjetas">
@@ -149,6 +153,7 @@
           </div>
         </div>
       </footer>
+      <script src="./data.js"></script>
   <script src="./data-upcoming-events.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  
 </body>
