--- a/stats.html
+++ b/stats.html
@@ -58,90 +58,15 @@
     </div>
   
   <section>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <table class="table table-bordered">
-            <thead>
-              <tr>
-                <th colspan="3">Events statistic</th>
-              </tr>
-              <tr>
-                <td>Events with the highest persentage of attendance</td>
-                <td>Events with the lowest persentage of attendance</td>
-                <td>Event with larger capacity</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              
-            </thead>
-            <thead>
-              <tr>
-                <th colspan="3">Upcoming events statistic by category</th>
-              </tr>
-              <tr>
-                <td>Categories</td>
-                <td>Revenues</td>
-                <td>Persentage of attendance</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-            </thead>
-            <thead>
-              <tr>
-                <th colspan="3">Past events statistic by category</th>
-              </tr>
-              <tr>
-                <td>Categories</td>
-                <td>Revenues</td>
-                <td>Persentage of attendance</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-            </thead>
-          </table>
-        </div>
-      </div>
+    
+    <div class="container" >
+      <table class="table table-bordered" id ="tabla-stats1">
+        <tbody>
+
+        </tbody>
+      </table>       
     </div>
+
   </section>
       <!-- PIE DE PAGINA -->
       <footer>
@@ -165,6 +90,8 @@
           </div>
         </div>
       </footer>
+      <script src="./data-stats.js"></script>
+  <script src="./data.js"></script>   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  
 </body>
 </html>
